java/variable-length-quantity